# airflow-k8s-practice

./: .dockerignore  .gitignore  Dockerfile  README.md  pyproject.toml
dags/: hello_k8s_dag.py
docs/: concepts.md  troubleshooting.md
helm/: airflow-values.yaml
